--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Hola Mundo</title>
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
+	<link rel="stylesheet" href="./styles.css">
   </head>
     <body>
       <h1>Hola mundo</h1>
